[package]
name = "x-proxy-pool"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1 # 减少并行代码生成以提升优化效果
lto = "thin"      # 链接时优化
opt-level = 3     # 最高级别优化
panic = "abort"   # 替换 panic 为 abort 减少二进制大小
strip = true      # 自动剔除调试符号（或用 `strip` 手动处理）

[dependencies]
anyhow = "1.0.98"
httparse = "1.10.1"
hyper = { version = "1.6.0", features = ["full"] }
indicatif = "0.17.11"
once_cell = "1.21.3"
reqwest = { version = "0.12.19", features = ["socks"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
